# Orbifold

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lumatone_1.ltn  orbifold_autosave.orbifold  orbifold_icon.aseprite
.github/workflows/: ci.yml  pages.yml
audio_assets/: README.md
docs/: add_project_command.md  add_ui_control.md  architecture.md  asset_browser.md  asset_to_sound.md  audio_midi_threading.md  file_formats.md  first_run.md  keyboard_shortcuts.md  known_limitations.md  lumatone_setup.md  lumatone_troubleshooting.md  manual_qa_checklist.md  operad_integration.md  orbifold_usability_gap_analysis.md  release_checklist.md  release_workflow.md  troubleshooting.md  ui_testing_workflow.md  web_parity_audit.md
examples/: orbifold_web.rs
lumatone_factory_presets/: 1. Classic Mode.ltn  10. 56 Polychromatic.ltn  2. Melodic Mode.ltn  3. Harmonic Mode.ltn  4. Multi-Instrument.ltn  5. 19 EDO.ltn  6. 22 EDO.ltn  7. 24 EDO.ltn  8. 31 EDO.ltn  9. 53 EDO.ltn
packaging/linux/: orbifold.desktop
scales/: 12-tet.scl  19-edo.scl  24-edo.scl  31-edo.scl  just-intonation-basic.scl
screenshots/: README.md
scripts/: build-web.sh  capture-web-visuals.mjs  check-web-dist.mjs  check-web-layout.mjs  check-web-live.mjs  check-web-manual-devices.mjs  check-web-manual-report.mjs  check-web-parity-complete.mjs  check-web-parity-gate.mjs  check-web-parity-status.mjs  check-web-smoke.mjs  test-web-artifact-checks.mjs  test-web-artifact-fingerprint.mjs  test-web-manual-devices.mjs  test-web-manual-report-validator.mjs  test-web-parity-complete.mjs  test-web-parity-gate.mjs  test-web-parity-status.mjs  test-web-smoke-helpers.mjs  test-web-visual-layout-helpers.mjs  web-artifact-fingerprint.mjs
src/: app.rs  audio.rs  gui.rs  lib.rs  logging.rs  main.rs  midi.rs  operad_bridge.rs  operad_ui.rs  project.rs  sample_preview.rs  scala.rs  scale.rs  settings.rs  synth.rs  time.rs  web.rs
src/ui/: accessibility.rs  actions.rs  labels.rs  mod.rs  native.rs  text.rs  text_audit.rs  theme.rs  visual_snapshot.rs  web.rs
src/ui/native/: browser.rs  control_panel.rs  controls.rs  devices.rs  editor_panels.rs  interactions.rs  piano_interaction.rs  presenters.rs  screenshot.rs  settings_panel.rs  surfaces.rs  tests.rs  top_bar.rs  windowing.rs  workspace.rs
tests/: desktop_metadata.rs  release_docs.rs  startup_probe.rs  user_docs.rs  web_pages.rs
web/: index.html
(+4 files in other folders)
