[package]
name = "orbifold"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["native-app"]
native-app = ["dep:cpal", "dep:midir", "dep:rfd", "dep:winit", "operad/native-window"]
web-app = [
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "operad/web-runtime",
]

[[bin]]
name = "orbifold"
path = "src/main.rs"
required-features = ["native-app"]

[[example]]
name = "orbifold_web"
required-features = ["web-app"]

[dependencies]
cpal = { version = "0.15", optional = true }
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["png"] }
js-sys = { version = "0.3.98", optional = true }
log = "0.4"
midir = { version = "0.9", optional = true }
operad = { git = "https://github.com/Andrewp2/Operad.git", rev = "a517853440f5f8f78b4de5b9f500556501285a5a", default-features = false, features = ["widgets"] }
parking_lot = "0.12"
pollster = "0.3"
rfd = { version = "0.14", optional = true }
wasm-bindgen = { version = "0.2.121", optional = true }
wasm-bindgen-futures = { version = "0.4.71", optional = true }
web-sys = { version = "0.3.98", optional = true, features = ["console"] }
winit = { version = "0.30", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "0.3"
libloading = "0.8"
